kubernetes/pterodactyl/panel/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pterodactyl
spec:
  selector:
    matchLabels:
      app: pterodactyl
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pterodactyl
      annotations:
        deploy-date: "deploy-date-value"
    spec:
      containers:
      - name: pterodactyl
        image: ghcr.io/pterodactyl/panel:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "300m"
          limits: 
            memory: "256Mi"
            cpu: "500m" 
        ports: 
          - containerPort: 80
        volumeMounts:
        - mountPath: /app/var/
          name: pterodactyl-app-content
        - mountPath: /etc/nginx/http.d/
          name: pterodactyl-nginx-content
        - mountPath: /etc/letsencrypt/
          name: pterodactyl-le-content
        - mountPath: /app/storage/logs
          name: pterodactyl-logs-content
      volumes:
      - name: pterodactyl-app-content
        persistentVolumeClaim:
          claimName:  pterodactyl-app-claim
      - name: pterodactyl-nginx-content
        persistentVolumeClaim:
          claimName:  pterodactyl-nginx-claim
      - name: pterodactyl-le-content
        persistentVolumeClaim:
          claimName:  pterodactyl-le-claim
      - name: pterodactyl-logs-content
        persistentVolumeClaim:
          claimName:  pterodactyl-logs-claim
